<resources>
    <string name="app_name">Documents Locker</string>
    <string name="account">Account</string>
    <string name="upload">Upload</string>
    <string name="my_doc">My Doc</string>
    <string name="document_name">Document Name</string>
    <string name="upload_your_document_here">UPLOAD YOUR DOCUMENTS HERE</string>
    <string name="type">Type</string>
    <string name="jpeg_jpg">jpeg/jpg</string>
    <string name="pdf">pdf</string>
    <string name="dox">dox</string>
    <string name="typeLogo">TypeLogo</string>
    <string name="select_file">Select file</string>
    <string name="no_file_selected">No file selected</string>
    <string name="sign_out">SignOut</string>
    <string name="downloadbutton">downloadButton</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="delete">DELETE</string>
    <string name="add_to_fav">ADD TO FAVOURITE</string>
    <string name="download">DOWNLOAD</string>
    <string name="name">Name</string>
    <string name="account_name">Account Name</string>
    <string name="total_documents">Total Documents</string>
    <string name="favourite_documents">Favourite Documents</string>
    <string name="details">DETAILS</string>
    <string name="remove_from_fav">Remove from favourite</string>
    <string name="email">Email</string>
</resources>